添加仿微信按钮点击拍照  长按视频录制功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".IjkPlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity android:name=".CameraViewActivity"/>
     </application>
 
 </manifest>
